--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -43,7 +43,7 @@ File: Layout CSS
 --------------------------------------------------------------------------------------------------------------- */
 #intro{padding:120px 0;}
 
-#intro article{text-align:center; opacity:.5;}
+#intro article{text-align:center; opacity:1;}/*.5;}*/
 #intro article:hover{opacity:1;}
 #intro article *{display:block; width:100%; margin:0; padding:0; box-sizing:border-box;}
 #intro article .heading{padding:30px 25px; font-size:18px;}
@@ -400,7 +400,10 @@ table a, #comments a{background-color:inherit;}
 /* Max Wrapper Width - Laptop, Desktop etc.
 --------------------------------------------------------------------------------------------------------------- */
 @media screen and (min-width:978px) {
-	#topbar, #header, #intro, #breadcrumb, .container, #cta, #footer, #copyright{max-width:978px;}
+	#topbar, #header, #intro, #breadcrumb, .container, #cta, #footer, #copyright{
+	max-width: 978px;
+	font-family: Verdana, Geneva, sans-serif;
+}
 }
 
 
@@ -409,4 +412,21 @@ table a, #comments a{background-color:inherit;}
 @media screen and (max-width:650px) {
 	.scrollable{display:block; width:100%; margin:0 0 30px 0; padding:0 0 15px 0; overflow:auto; overflow-x:scroll;}
 	.scrollable table{margin:0; padding:0; white-space:nowrap;}
+}
+#top .wrapper.row1 #header #apDiv1 p strong {
+	font-size: 18px;
+}
+.WordSection1 .MsoNormal span {
+	text-align: left;
+}
+
+
+.logo_title{
+	font-weight: 800;
+	font-size:23px;
+}
+
+
+#email_image{
+	margin-left: -24px;
 }
